# quake-clone

./: .gitignore  CMakeLists.txt  README.md
resources/meshes/: christian.mtl  freddy.mtl  horse1.mtl  jennifer3.mtl  mark.mtl  skull.mtl
resources/scenes/: empty.json  main.json
resources/shaders/: default.frag  default.vert  skybox.frag  skybox.vert  texture.frag
resources/shaders_old/: default.frag  default.vert  texture.frag  texture.vert
src/: ecs.cpp  ecs.h  game.cpp  game.h  game_create_helpers.h  game_types.h  input.h  main.cpp
src/core/: ecs.cpp  ecs.h  timer.h
src/network/: network.cpp  network.h
src/physics/: aabb.cpp  aabb.h  physics.cpp  physics.h  sphere.cpp  sphere.h
src/renderer/: AspectRatioWidget.hpp  camera.cpp  camera.h  lights.cpp  lights.h  mainwindow.cpp  mainwindow.h  movement.cpp  movement.h  renderer.cpp  renderer.h  renderer_old.cpp  renderer_old.h  rendermodel.cpp  rendermodel.h  scenedata.h  sceneparser.cpp  sceneparser.h
src/renderer/objects/: OBJ_Loader.h  cone.cpp  cone.h  cube.cpp  cube.h  cylinder.cpp  cylinder.h  player.cpp  player.h  sphere.cpp  sphere.h  trimesh.cpp  trimesh.h
src/scene/: level.cpp  level.h  scene_types.h  scenedata.h  scenefilereader.cpp  sceneparser.cpp  sceneparser.h
